k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jquery-deployment
  namespace: jquery
spec:
  selector:
    matchLabels:
      app: jquery
  replicas: 1 # tells deployment to run 2 pods matching the template
  template:
    metadata:
      labels:
        app: jquery
    spec:
      containers:
      - name: jquery
        image: 885491079534.dkr.ecr.us-east-2.amazonaws.com/jquery:number        
        ports:
        - containerPort:80
